--- a/auth.html
+++ b/auth.html
@@ -36,6 +36,7 @@
           <span class="error">Ошибка: неверный логин или пароль</span>
           <label>
             <input
+              id="login"
               class="input"
               type="text"
               placeholder="Игровой логин"
@@ -44,6 +45,7 @@
           </label>
           <label>
             <input
+              id="password"
               class="input"
               type="password"
               pattern="\d*"
@@ -81,4 +83,5 @@
       </nav>
     </footer>
   </body>
+  <script src="js/auth.js"></script>
 </html>
