--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
           <input class="burger-check" id="burger-check" type="checkbox">
           <label for="burger-check" class="burger"></label>
           <ul class="navigation">
-                <li><a class="button-like button-like__selected" href="#main">Главная</a></li>
-                <li><a class="button-like" href="#start">Играть</a></li>
-                <li><a class="button-like" href="#">Магазин</a></li>
-                <li><a class="button-like" href="#">Форум</a></li>
+            <li><a id="main-btn" class="button-like button-like__selected" href="./index.html#main">Главная</a></li>
+            <li><a id="start-btn" class="button-like" href="./index.html#start">Играть</a></li>
+            <li><a id="shop-btn" class="button-like" href="./index.html#shop">Магазин</a></li>
+            <li><a class="button-like" href="#">Форум</a></li>
           </ul>
         </div>
         <div class="side-container">
@@ -173,4 +173,5 @@
       </nav>
     </footer>
   </body>
+  <script src="js/scroll.js"></script>
 </html>
