--- a/index.html
+++ b/index.html
@@ -173,5 +173,5 @@
       </nav>
     </footer>
   </body>
-  <script src="js/scroll.js"></script>
+  <script src="js/scroll-main.js"></script>
 </html>
